[project]
name = "lxai-anim"
version = "0.1.0"
description = "Terminal animation for LisbonAI, babeh"
requires-python = ">=3.14"
dependencies = ["asyncssh>=2.13.2", "noise>=1.2.2"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "SIM", "RET"]
ignore = [
    "B905",    # zip() without explicit strict parameter
    "SIM102",  # Use single if statement instead of nested ifs
    "SIM105",  # Use contextlib.suppress instead of try-except-pass
    "SIM114",  # Combine if branches using logical or
]

[tool.ruff.lint.per-file-ignores]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
